Allow one blog entry to be viewed separately

--- a/flask_projects/simple_blog/templates/index.html
+++ b/flask_projects/simple_blog/templates/index.html
@@ -16,7 +16,7 @@
             {%  for d in posts: %}
             <h2>{{ d['title'] }}</h2>
             <p class="text">{{ d['subtitle'] }} </p>
-            <a href="#">Read</a>
+            <a href="{{  url_for('get_post', index=d['id']) }}">Read</a>
             {% endfor %}
         </div>
     </div>
